--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
