adicao de imagem

--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Pet Shop Cão Sagaz</title>
 </head>
 <body>
     <header>
-        <nav>
-            <a></a>
-        </nav>
+        <nav class="navbar">
+            <a href="" class="link">Menu</a>
+            <h1 class="titulo">WOOF</h1>
+            <a href="" class="link">Shop</a>
+        </nav>        
     </header>
-    <main></main>
+    
+    <main>
+        <img src="./assets/catioro.png">
+    </main>
     <footer></footer>
 </body>
 </html>
