Definição do estilo do footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <main></main>
     <footer>
       <div class="footer_info-area">
-        <p class="footer-titulo">Texto de título</p>
+        <p class="footer_info-area--titulo">Texto de título</p>
+        <picture class="footer_info-area--imagem">
+          <img alt="Logo do petshop" />
+        </picture>
+        <address class="footer_info-area--endereco">
+          Rua do carai, 69, Cabaré
+        </address>
+        <p class="footer_info-area--telefone">(38) 9 6969-6969</p>
       </div>
       <ul class="footer_ul">
         <li class="footer_ul--item">Serviços</li>
