Estado final do dia 08/04

--- a/index.html
+++ b/index.html
@@ -11,34 +11,36 @@
     <header></header>
     <main></main>
     <footer>
-      <div class="footer_info-area">
-        <p class="footer_info-area--titulo">Texto de título</p>
-        <picture class="footer_info-area--imagem">
-          <img alt="Logo do petshop" />
-        </picture>
-        <address class="footer_info-area--endereco">
-          Rua do carai, 69, Cabaré
-        </address>
-        <p class="footer_info-area--telefone">(38) 9 6969-6969</p>
+      <div class="footer">
+        <div class="footer_info-area">
+          <p class="footer_info-area--titulo">Petshop João Cuzinho</p>
+          <picture class="footer_info-area--imagem">
+            <img alt="Logo do petshop" />
+          </picture>
+          <address class="footer_info-area--endereco">
+            Rua do carai, 69, Cabaré
+          </address>
+          <p class="footer_info-area--telefone">(38) 9 6969-6969</p>
+        </div>
+        <ul class="footer_ul">
+          <li class="footer_ul--item">Serviços</li>
+          <li class="footer_ul--item">Banho</li>
+          <li class="footer_ul--item">Tosa</li>
+          <li class="footer_ul--item">Oral babado</li>
+        </ul>
+        <ul class="footer_ul">
+          <li class="footer_ul--item">Sobre</li>
+          <li class="footer_ul--item">Curso de Tosa</li>
+          <li class="footer_ul--item">Zoofilias</li>
+          <li class="footer_ul--item">Churrasco de cachorro</li>
+        </ul>
+        <ul class="footer_ul">
+          <li class="footer_ul--item">Contatos</li>
+          <li class="footer_ul--item">Item 2</li>
+          <li class="footer_ul--item">Item 3</li>
+          <li class="footer_ul--item">Item 4</li>
+        </ul>
       </div>
-      <ul class="footer_ul">
-        <li class="footer_ul--item">Serviços</li>
-        <li class="footer_ul--item">Item 2</li>
-        <li class="footer_ul--item">Item 3</li>
-        <li class="footer_ul--item">Item 4</li>
-      </ul>
-      <ul class="footer_ul">
-        <li class="footer_ul--item">Sobre</li>
-        <li class="footer_ul--item">Item 2</li>
-        <li class="footer_ul--item">Item 3</li>
-        <li class="footer_ul--item">Item 4</li>
-      </ul>
-      <ul class="footer_ul">
-        <li class="footer_ul--item">Contatos</li>
-        <li class="footer_ul--item">Item 2</li>
-        <li class="footer_ul--item">Item 3</li>
-        <li class="footer_ul--item">Item 4</li>
-      </ul>
     </footer>
   </body>
 </html>
