estado final do dia 08/04

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pet Shop Cão Sagaz</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <nav class="navbar">
             <a href="" class="link">Menu</a>
             <h1 class="titulo">WOOF</h1>
@@ -16,8 +16,9 @@
         </nav>        
     </header>
     
-    <main>
-    
+    <main class="conteudo">
+        <h1>Para todos os bons cachorros e cadelas</h1>
+        <a href="" class="botao__compra">Compre agora!</a>
     </main>
     <footer></footer>
 </body>
