--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Pet Shop Cão Sagaz</title>
-</head>
-<body>
+
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
     <header class="cabecalho">
-        <nav class="navbar">
-            <a href="" class="link">Menu</a>
-            <h1 class="titulo">WOOF</h1>
-            <a href="" class="link">Shop</a>
-        </nav>        
+      <nav class="navbar">
+        <a href="" class="link">Menu</a>
+        <h1 class="titulo">WOOF</h1>
+        <a href="" class="link">Shop</a>
+      </nav>
     </header>
-    
+
     <main class="conteudo">
-        <h1>Para todos os bons cachorros e cadelas</h1>
-        <a href="" class="botao__compra">Compre agora!</a>
+      <h1>Para todos os bons cachorros e cadelas</h1>
+      <a href="" class="botao__compra">Compre agora!</a>
     </main>
+
     <footer>
       <div class="footer_info-area">
         <p class="footer_info-area--titulo">Texto de título</p>
